--- a/src/menubar/popup.css
+++ b/src/menubar/popup.css
@@ -22,28 +22,58 @@ button {
 
 #header {
   width: 100%;
-  height: 50px;
-  background-color: #ce1d2a;
+  height: 75px;
+  background-color: #303030;
   box-shadow: 0px 0px 8px 2px #cccccc;
 }
 
 #header img {
   position: absolute;
-  width: 30px;
-  top: 13px;
-  left: 25px;
+  height: 50px;
+  top: 12px;
+  left: 15px;
 }
 
 #header h1 {
-  top: 10px;
-  width: 250px;
-  position: absolute;
   margin: 0;
   padding: 0;
-  text-align: center;
-  font-size: 20px;
+  font-size: 1.3rem;
   color: white;
-  font-weight: 800;
+  position: relative;
+  font-weight: 600;
+  animation: marquee 10s infinite linear;
+  animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+  display: table;
+  padding-left: 100%;
+}
+
+#header h2 {
+  margin: 0;
+  padding: 0;
+  font-size: 1rem;
+  color: white;
+  position: absolute;
+  left: 75px;
+  top: 35px;
+  font-weight: normal;
+}
+
+#songTitleWrapper {
+  position: absolute;
+  left: 75px;
+  top: 10px;
+  width: 175px;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
 
 #header a {
