--- a/Extension/connect.css
+++ b/Extension/connect.css
@@ -3,7 +3,7 @@
   top: -50px;
   right: 0;
   z-index: 10000;
-  width: 175px;
+  min-width: 175px;
   border-bottom-left-radius: 5px;
   height: 50px;
   background-color: rgba(255, 255, 255, 0.5);
