--- a/src/windows/css/preferences.css
+++ b/src/windows/css/preferences.css
@@ -3,7 +3,7 @@ html {
 }
 
 #header {
-  background-color: #ce1d2a;
+  background-color: #3b5099;
   color: white;
   width: 100%;
   height: 60px;
@@ -50,7 +50,7 @@ html {
 #footer {
   position: fixed;
   bottom: 0;
-  background-color: #ce1d2a;
+  background-color: #3b5099;
   color: white;
   height: 40px;
   width: 100%;
