--- a/src/windows/css/update.css
+++ b/src/windows/css/update.css
@@ -1,5 +1,5 @@
 #header {
-  background-color: #ce1d2a;
+  background-color: #3b5099;
   color: white;
   width: 100%;
   height: 60px;
@@ -26,7 +26,7 @@
 #footer {
   position: fixed;
   bottom: 0;
-  background-color: #ce1d2a;
+  background-color: #3b5099;
   color: white;
   height: 60px;
   width: 100%;
