--- a/src/windows/css/update.css
+++ b/src/windows/css/update.css
@@ -1,5 +1,11 @@
+html,
+body {
+  background-color: #282828;
+  color: white;
+}
+
 #header {
-  background-color: #ce1d2a;
+  background-color: #596cae;
   color: white;
   width: 100%;
   height: 60px;
@@ -26,7 +32,7 @@
 #footer {
   position: fixed;
   bottom: 0;
-  background-color: #ce1d2a;
+  background-color: #596cae;
   color: white;
   height: 60px;
   width: 100%;
