--- a/Extension/css/connect.css
+++ b/Extension/css/connect.css
@@ -1,38 +1,39 @@
-#ytp-connectinfo {
-  position: fixed;
-  top: -50px;
-  right: 0;
-  z-index: 10000;
-  min-width: 175px;
-  border-bottom-left-radius: 5px;
-  height: 50px;
-  background-color: rgba(255, 255, 255, 0.5);
-  user-select: none;
-  animation-name: slideIn;
-  animation-duration: 5s;
-  animation-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
-  color: black;
+#premid-connectinfo {
+  position: fixed !important;
+  top: -50px !important;
+  right: 0 !important;
+  z-index: 10000 !important;
+  min-width: 175px !important;
+  border-bottom-left-radius: 5px !important;
+  height: 50px !important;
+  background-color: rgba(255, 255, 255, 0.5) !important;
+  user-select: none !important;
+  animation-name: slideIn !important;
+  animation-duration: 5s !important;
+  animation-timing-function: cubic-bezier(0.19, 1, 0.22, 1) !important;
+  color: black !important;
 }
 
-#ytp-connectinfo * {
-  margin: 0;
-  padding: 0;
+#premid-connectinfo * {
+  margin: 0 !important;
+  padding: 0 !important;
 }
 
-#ytp-connectinfo img {
-  float: left;
-  margin: 5px;
-  width: 40px;
-  height: 40px;
+#premid-connectinfo img {
+  float: left !important;
+  margin: 5px !important;
+  width: 40px !important;
+  height: 40px !important;
 }
 
-#ytp-connectinfo h1 {
-  font-size: 20px;
-  margin-top: 4px;
+#premid-connectinfo h1 {
+  font-size: 20px !important;
+  margin: 0 !important;
+  margin-top: 4px !important;
 }
 
-#ytp-connectinfo h2 {
-  font-size: 17px;
+#premid-connectinfo h2 {
+  font-size: 17px !important;
 }
 
 @keyframes slideIn {
