Fixed font loading issue

--- a/Extension/css/reset.css
+++ b/Extension/css/reset.css
@@ -1,12 +1,14 @@
 @font-face {
   font-family: "Roboto";
-  src: url("../fonts/Roboto/Roboto-Regular.ttf") format("truetype");
+  src: url("chrome-extension://__MSG_@@extension_id__/fonts/Roboto/Roboto-Regular.ttf")
+    format("truetype");
 }
 
 @font-face {
   font-family: "Roboto";
   font-weight: bold;
-  src: url("../fonts/Roboto/Roboto-Bold.ttf") format("truetype");
+  src: url("chrome-extension://__MSG_@@extension_id__/fonts/Roboto/Roboto-Bold.ttf")
+    format("truetype");
 }
 
 * {
