--- a/Extension/css/popup.css
+++ b/Extension/css/popup.css
@@ -25,6 +25,7 @@ body {
 .dark .tabs,
 .dark .card-panel {
   background-color: #282828;
+  color: #99aab5;
 }
 
 ::-webkit-scrollbar {
@@ -90,7 +91,6 @@ html:not(.dark) ::-webkit-scrollbar-thumb {
 }
 
 #pMiDOption {
-  color: #848484;
   margin: 0;
   padding: 0;
   font-size: 17px;
