--- a/Extension/css/connect.css
+++ b/Extension/css/connect.css
@@ -10,13 +10,13 @@
 }
 
 #premid-connectinfo.dark {
-  background-color: #282828 !important;
-  color: #99aab5 !important;
-  box-shadow: 0px 3px 8px rgba(25, 25, 25, 0.15) !important;
+  background-color: #596cae !important;
+  color: rgba(255, 255, 255, 0.8);
+  box-shadow: 0px 0px 14px rgba(25, 25, 25, 0.5) !important;
 }
 
 #premid-connectinfo:not(.dark) {
-  color: #575757 !important;
+  color: #575757;
   background-color: white !important;
   box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.15) !important;
 }
@@ -55,13 +55,11 @@
   font-weight: 600 !important;
   margin: 0 !important;
   margin-top: 6px !important;
-  color: #575757 !important;
 }
 
 #premid-connectinfo h2 {
   font-size: 15px !important;
   font-weight: 500 !important;
-  color: #575757 !important;
 }
 
 @keyframes slideIn {
