--- a/Extension/css/popup.css
+++ b/Extension/css/popup.css
@@ -11,6 +11,8 @@
 
 * {
   font-family: "Roboto", sans-serif;
+  padding: 0;
+  margin: 0;
 }
 
 html,
@@ -26,8 +28,9 @@ body {
   background-color: hsl(220, 7%, 11%);
 }
 
-.dark .card-panel {
+.dark .card-panel, .dark .usercard {
   background-color: hsl(220, 7%, 15%);
+  color: rgba(255, 255, 255, 0.6);
   box-shadow: none;
 }
 
@@ -147,44 +150,54 @@ html:not(.dark) ::-webkit-scrollbar-thumb {
   cursor: pointer;
 }
 
+.switch label .lever {
+  width: 42px;
+  height: 24px;
+  background: #72767d;
+}
+
+input[type=checkbox]:checked:not(:disabled) ~ .lever:active::before, input[type=checkbox]:checked:not(:disabled).tabbed:focus ~ .lever::before {
+  background-color: transparent; 
+}
+
+.switch label .lever:before, .switch label .lever:after {
+  width: 18px;
+  height: 18px;
+  left: 3px;
+  top: 3px;
+}
+
+.switch label .lever:after {
+  box-shadow: none;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15);
+}
+
+.switch label input[type=checkbox]:checked+.lever:before, .switch label input[type=checkbox]:checked+.lever:after {
+  left: 21px;
+}
+
 .switch label input[type="checkbox"]:checked + .lever:after {
-  background-color: #7289da;
+  background-color: #fff;
 }
 
 .switch label input[type="checkbox"]:checked + .lever {
-  background-color: rgba(109, 128, 194, 0.4);
-}
-
-.yt:checked + .lever:after {
-  background-color: #c43a39 !important;
+  background-color: #7289da;
 }
 
 .yt:checked + .lever {
-  background-color: rgba(216, 78, 77, 0.4) !important;
-}
-
-.twitch:checked + .lever:after {
-  background-color: #4b367c !important;
+  background-color: rgb(218, 39, 39) !important;
 }
 
 .twitch:checked + .lever {
-  background-color: rgba(95, 74, 144, 0.4) !important;
-}
-
-.soundcloud:checked + .lever:after {
-  background-color: #fe8031 !important;
+  background-color: #7d5bbe !important;
 }
 
 .soundcloud:checked + .lever {
-  background-color: rgba(255, 148, 79, 0.4) !important;
-}
-
-.netflix:checked + .lever:after {
-  background-color: #cc1617 !important;
+  background-color: rgb(255, 102, 0) !important;
 }
 
 .netflix:checked + .lever {
-  background-color: rgba(204, 22, 23, 0.4) !important;
+  background-color: rgba(204, 22, 23, 1) !important;
 }
 
 .card-panel {
@@ -243,4 +256,44 @@ html:not(.dark) ::-webkit-scrollbar-thumb {
 .credit-panel h2 {
   font-size: 15px;
   margin: 0;
+}
+
+.credits_container {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+}
+
+.usercard {
+  user-select: none;
+  background: #fff;
+  box-shadow: 0px 3px 14px rgba(0, 0, 0, 0.15);
+  flex-grow: 1;
+  flex: 1 0;
+  float: left;
+  justify-content: center;
+  margin: 10px;
+  padding: 24px;
+  text-align: center;
+  border-radius: 4px;
+  width: 50%;
+  transition: all 150ms ease;
+}
+
+.usercard .credits_text * {
+  overflow: hidden;
+}
+
+.usercard .credits_avatar img {
+  width: 40px;
+  border-radius: 60px;
+}
+
+.usercard:hover .credits_avatar img {
+  opacity: 0.7;
+}
+
+.usercard:hover {
+  background: #7084d6;
+  color: rgba(255, 255, 255, 0.6);
 }
