Lazyness is overwhelming

--- a/Extension/css/options.css
+++ b/Extension/css/options.css
@@ -1,15 +1,1 @@
-.right {
-  float: right;
-}
-
-#content h1 {
-  margin: 5px;
-}
-
-table {
-  margin: 5px;
-}
-
-tr td:first-child {
-  width: 90%;
-}
+.right{float:right}#content h1{margin:5px}table{margin:5px}tr td:first-child{width:90%}
