--- a/Extension/css/tab.css
+++ b/Extension/css/tab.css
@@ -1,128 +1,1 @@
-body {
-  color: rgb(146, 146, 146);
-}
-
-.dark {
-  background-color: hsl(220, 7%, 11%);
-}
-
-.dark .tabs,
-.dark .card-panel {
-  background-color: hsl(220, 7%, 15%);
-  color: rgba(255, 255, 255, 0.6);
-  box-shadow: none;
-}
-
-#pMiDHeader {
-  z-index: 10000;
-  position: fixed;
-  top: 0;
-  height: 75px;
-  width: 100%;
-  background-color: rgba(89, 107, 174, 1);
-}
-
-#pMiDHeader img {
-  height: 75px;
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-#pMiDHeading {
-  color: #596cae;
-  margin: 5px;
-  margin-bottom: 20px;
-  padding: 0;
-  font-size: 30px;
-  font-weight: bold;
-  text-align: center;
-}
-
-h2 {
-  font-size: 25px !important;
-  margin: 0 !important;
-  margin-bottom: 15px !important;
-}
-
-h3 {
-  font-size: 22px !important;
-  margin: 0 !important;
-  margin-top: 5px !important;
-  margin-bottom: 5px !important;
-}
-
-p {
-  font-size: 17px !important;
-  margin: 0 !important;
-  line-height: 1;
-}
-
-#content {
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
-  top: 75px;
-  max-width: 500px;
-}
-
-.card-panel {
-  margin-top: 50px !important;
-  margin-bottom: 50px !important;
-}
-
-ol,
-ul {
-  padding-left: 25px !important;
-  font-size: 17px;
-  margin: 0;
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-li {
-  list-style-type: disc !important;
-}
-
-#buttonWrapper {
-  text-align: center;
-  margin-top: 15px;
-}
-
-a.btn {
-  width: 49%;
-  padding: 10px !important;
-  margin-bottom: 5px;
-  height: unset !important;
-  line-height: unset !important;
-  font-weight: 500;
-}
-
-a.close {
-  background-color: rgba(89, 107, 174, 1) !important;
-}
-
-a.close:hover {
-  background-color: rgba(89, 107, 174, 0.75) !important;
-}
-
-a.getSupport {
-  background-color: #575757 !important;
-}
-
-a.getSupport:hover {
-  background-color: rgba(87, 87, 87, 0.75) !important;
-}
-
-a.gotIt {
-  background-color: #3cac38 !important;
-}
-
-a.gotIt:hover {
-  background-color: rgba(60, 172, 56, 0.75) !important;
-}
-
-.smallCenter {
-  text-align: center;
-  font-size: 15px;
-}
+body{color:#929292}.dark{background-color:#1a1b1e}.dark .tabs,.dark .card-panel{background-color:#242529;color:rgba(255,255,255,0.6);-webkit-box-shadow:none;box-shadow:none}#pMiDHeader{z-index:10000;position:fixed;top:0;height:75px;width:100%;background-color:#596bae}#pMiDHeader img{height:75px;position:relative;left:50%;-webkit-transform:translateX(-50%);transform:translateX(-50%)}#pMiDHeading{color:#596cae;margin:5px;margin-bottom:20px;padding:0;font-size:30px;font-weight:bold;text-align:center}h2{font-size:25px !important;margin:0 !important;margin-bottom:15px !important}h3{font-size:22px !important;margin:0 !important;margin-top:5px !important;margin-bottom:5px !important}p{font-size:17px !important;margin:0 !important;line-height:1}#content{position:relative;left:50%;-webkit-transform:translateX(-50%);transform:translateX(-50%);top:75px;max-width:500px}.card-panel{margin-top:50px !important;margin-bottom:50px !important}ol,ul{padding-left:25px !important;font-size:17px;margin:0;margin-top:5px;margin-bottom:5px}li{list-style-type:disc !important}#buttonWrapper{text-align:center;margin-top:15px}a.btn{width:49%;padding:10px !important;margin-bottom:5px;height:unset !important;line-height:unset !important;font-weight:500}a.close{background-color:#596bae !important}a.close:hover{background-color:rgba(89,107,174,0.75) !important}a.getSupport{background-color:#575757 !important}a.getSupport:hover{background-color:rgba(87,87,87,0.75) !important}a.gotIt{background-color:#3cac38 !important}a.gotIt:hover{background-color:rgba(60,172,56,0.75) !important}.smallCenter{text-align:center;font-size:15px}
