--- a/Extension/scss/connect.scss
+++ b/Extension/scss/connect.scss
@@ -24,7 +24,7 @@
 #premid-connectinfo {
   position: fixed !important;
   top: 5px !important;
-  right: -110% !important;
+  right: 5px !important;
   z-index: 10000 !important;
   width: auto !important;
   overflow: hidden !important;
