added OtakuStream Support
It needs some fixes and you have to put the real Client_ID and info, it now shows that you are watching anime in Animeflix

--- a/Extension/scss/popup.scss
+++ b/Extension/scss/popup.scss
@@ -237,6 +237,10 @@ input[type="checkbox"]:checked:not(:disabled).tabbed:focus ~ .lever::before {
   background-color: #e23333 !important;
 }
 
+.otakustream:checked + .lever {
+  background-color: #e23333 !important;
+}
+
 .card-panel {
   margin: 10px 5px;
   padding: 14px;
